Fix temperature-based sampling in MMAI

--- a/AI/MMAI/CMakeLists.txt
+++ b/AI/MMAI/CMakeLists.txt
@@ -9,6 +9,8 @@ set(MMAI_FILES
   BAI/model/ScriptedModel.cpp
   BAI/model/NNModel.h
   BAI/model/NNModel.cpp
+  BAI/model/NNModelStochastic.h
+  BAI/model/NNModelStochastic.cpp
   BAI/model/util/bucketing.cpp
   BAI/model/util/bucketing.h
   BAI/model/util/common.h
