--- a/config/schemas/gameSettings.json
+++ b/config/schemas/gameSettings.json
@@ -112,13 +112,17 @@
 			"type" : "object",
 			"additionalProperties" : false,
 			"properties" : {
-				"weeklyGrowthPercent" :     { "type" : "number" },
-				"weeklyGrowthCap" :         { "type" : "number" },
-				"dailyStackExperience" :    { "type" : "number" },
-				"allowRandomSpecialWeeks" : { "type" : "boolean" },
-				"allowAllForDoubleMonth" :  { "type" : "boolean" },
-				"allowJoiningForFree" :     { "type" : "boolean" },
-				"joiningPercentage" :       { "type" : "number" }
+				"weeklyGrowthPercent" :               { "type" : "number" },
+				"weeklyGrowthCap" :                   { "type" : "number" },
+				"additionalWeeklyGrowthSpecialWeek" : { "type" : "number" },
+				"monthDoubleGrowthProbability" :      { "type" : "number" },
+				"monthPlagueProbability" :            { "type" : "number" },
+				"weekSpecialProbability" :            { "type" : "number" },
+				"dailyStackExperience" :              { "type" : "number" },
+				"allowRandomSpecialWeeks" :           { "type" : "boolean" },
+				"allowAllForDoubleMonth" :            { "type" : "boolean" },
+				"allowJoiningForFree" :               { "type" : "boolean" },
+				"joiningPercentage" :                 { "type" : "number" }
 			}
 		},
 		"dwellings": {
