Run unit tests as part of cross-repository PR

--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -444,10 +444,7 @@ jobs:
             path: .summary/source.json
 
   test:
-    continue-on-error: true
     name: Test (${{ matrix.platform }})
-    env:
-      HEROES_3_DATA_PASSWORD: ${{ secrets.HEROES_3_DATA_PASSWORD }}
     strategy:
       fail-fast: false
       matrix:
@@ -539,18 +536,11 @@ jobs:
         verbose: 2
 
     - name: Prepare Heroes 3 data
-      if: ${{ env.HEROES_3_DATA_PASSWORD != '' }}
       run: |
-        if [[ ${{github.repository_owner}} == vcmi ]]
-        then
-            data_url="https://github.com/vcmi-mods/vcmi-test-data/releases/download/v1.0/h3_assets.zip"
-        else
-            data_url="https://github.com/${{github.repository_owner}}/vcmi-test-data/releases/download/v1.0/h3_assets.zip"
-        fi
-        wget --progress=dot:giga "$data_url" -O h3_assets.zip
-        7za x h3_assets.zip -p$HEROES_3_DATA_PASSWORD
+        data_url="https://github.com/vcmi-mods/vcmi-test-data/releases/download/v2.0/heroes3.7z"
+        wget --progress=dot:giga "$data_url" -O heroes3.7z
         mkdir -p ~/.local/share/vcmi/
-        mv h3_assets/* ~/.local/share/vcmi/
+        7za x -o"$HOME/.local/share/vcmi/" heroes3.7z
 
     - name: Configure
       run: |
@@ -561,9 +551,20 @@ jobs:
         cmake --build --preset ${{matrix.preset}}
 
     - name: Test
-      if: ${{ env.HEROES_3_DATA_PASSWORD != '' }}
       run: |
         ctest --preset ${{matrix.preset}}
+
+    - name: Validate library startup
+      run: |
+        cd "${{github.workspace}}/out/build/${{matrix.preset}}/bin"
+        ./vcmiserver --dummy-run 2> >(tee error.log)
+        if [ ! -s error.log ]; then
+            echo "Validation OK!"
+            exit 0
+        else
+            echo "Validation failed!"
+            exit 1
+        fi
 
   windows-installer:
     needs: build
