portrait disabled by default

--- a/config/schemas/settings.json
+++ b/config/schemas/settings.json
@@ -323,7 +323,7 @@
 				},
 				"allowPortrait" : {
 					"type" : "boolean",
-					"default" : true
+					"default" : false
 				},
 				"asyncUpscaling" : {
 					"type" : "boolean",
