[1.7.2] Fix Qt translations update action

--- a/.github/workflows/qt_translation_update.yml
+++ b/.github/workflows/qt_translation_update.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install Qt tools (lupdate)
         run: |
-          sudo apt install -y --no-install-recommends qttools5-dev-tools
+          sudo apt-get update && sudo apt install -y --no-install-recommends qttools5-dev-tools
 
       - name: Update TS files (Launcher)
         working-directory: launcher
