[CI][macOS] configure codesigning and notarization

--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -154,6 +154,37 @@ jobs:
       if: "${{ matrix.before_install != '' }}"
       run: source '${{github.workspace}}/CI/before_install/${{matrix.before_install}}' '${{matrix.arch}}'
 
+    - name: Configure codesigning for macOS
+      if: ${{ startsWith(matrix.platform, 'mac-') }}
+      env: 
+        KEYCHAIN_PASSWORD: ${{ secrets.MACOS_KEYCHAIN_PASSWORD }}
+        SIGNING_CERTIFICATE_BASE64: ${{ secrets.MACOS_SIGNING_CERTIFICATE_BASE64 }}
+        SIGNING_CERTIFICATE_PASSWORD: ${{ secrets.MACOS_SIGNING_CERTIFICATE_PASSWORD }}
+      run: |
+        if [[ -z "$KEYCHAIN_PASSWORD" || -z "$SIGNING_CERTIFICATE_BASE64" || -z "$SIGNING_CERTIFICATE_PASSWORD" ]]; then
+          echo "skip codesigning"
+          exit 0
+        fi
+
+        keychainName=build.keychain
+        security create-keychain -p "$KEYCHAIN_PASSWORD" "$keychainName"
+        security default-keychain -s "$keychainName"
+        security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$keychainName"
+        security set-keychain-settings -u -t 7200 "$keychainName"
+
+        certPath="$RUNNER_TEMP/cert.p12"
+        printf "$SIGNING_CERTIFICATE_BASE64" | base64 -D -o "$certPath"
+
+        security import "$certPath" -f pkcs12 -P "$SIGNING_CERTIFICATE_PASSWORD" -T "$(which codesign)" -k "$keychainName"
+        security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$keychainName" >/dev/null
+
+        # fetch SHA-1 of the p12 cert. Sample output for awk processing:
+        # SHA1 Fingerprint=00:11:22:33:44:55:66:77:88:99:AA:BB:CC:DD:EE:FF:00:11:22:33
+        signingIdentitySHA=$(openssl pkcs12 -in "$certPath" -nodes -passin "pass:$SIGNING_CERTIFICATE_PASSWORD" 2>/dev/null \
+          | openssl x509 -noout -fingerprint -sha1 \
+          | awk -F = '{ gsub(/:/, "", $2); print $2 }')
+        echo MACOS_CODE_SIGN_IDENTITY=$signingIdentitySHA >> $GITHUB_ENV
+
     # Save only on cache miss, GitHub caches are immutable per key
     - name: APT cache save
       if: contains(matrix.os, 'ubuntu') && steps.aptcache.outputs.cache-hit != 'true'
@@ -315,6 +346,28 @@ jobs:
         cd "${{github.workspace}}/out/build/${{matrix.preset}}"
         cpack -C ${{matrix.pack_type}}
       shell: pwsh
+
+    - name: Notarize macOS dmg
+      if: ${{ startsWith(matrix.platform, 'mac-') }}
+      env: 
+        NOTARIZATION_APPLE_ID: ${{ secrets.MACOS_NOTARIZATION_APPLE_ID }}
+        NOTARIZATION_APPLE_ID_PASSWORD: ${{ secrets.MACOS_NOTARIZATION_APPLE_ID_PASSWORD }}
+        NOTARIZATION_TEAM_ID: ${{ secrets.MACOS_NOTARIZATION_TEAM_ID }}
+      run: |
+        if [[ -z "$NOTARIZATION_APPLE_ID" || -z "$NOTARIZATION_APPLE_ID_PASSWORD" || -z "$NOTARIZATION_TEAM_ID" ]]; then
+          echo "skip notarization"
+          exit 0
+        fi
+
+        dmg='${{ github.workspace }}/out/build/${{ matrix.preset }}/${{ env.VCMI_PACKAGE_FILE_NAME }}.${{ matrix.extension }}'
+        codesign --verbose=4 --force --sign "$MACOS_CODE_SIGN_IDENTITY" "$dmg"
+        xcrun notarytool submit \
+          --apple-id "$NOTARIZATION_APPLE_ID" \
+          --password "$NOTARIZATION_APPLE_ID_PASSWORD" \
+          --team-id "$NOTARIZATION_TEAM_ID" \
+          --wait \
+          "$dmg"
+        xcrun stapler staple "$dmg"
 
     - name: Find Android package
       if: ${{ startsWith(matrix.platform, 'android') }}
