--- a/config/schemas/settings.json
+++ b/config/schemas/settings.json
@@ -117,7 +117,7 @@
 				},
 				"saveBeforeVisit" : {
 					"type" : "boolean",
-					"default" : true
+					"default" : false
 				},
 				"userRelativePointer" : {
 					"type" : "boolean",
