First attempt at using Lua for actual spell effect

--- a/config/gameConfig.json
+++ b/config/gameConfig.json
@@ -140,6 +140,12 @@
 		"config/mapLayers.json"
 	],
 	
+	"scripts" : {
+		"summon" : {
+			"source" : "scripts/SpellEffectSummon.lua",
+			"implements" : "BATTLE_EFFECT"
+		}
+	},
 	
 	"settings":
 	{
