Reorganize & move scripting classes to lib/scripting directory

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -260,6 +260,10 @@ set(lib_MAIN_SRCS
 	serializer/JsonUpdater.cpp
 	serializer/SerializerReflection.cpp
 
+	scripting/ScriptPool.cpp
+	scripting/ScriptHandler.cpp
+	scripting/ScriptImpl.cpp
+
 	spells/AbilityCaster.cpp
 	spells/BattleSpellMechanics.cpp
 	spells/BonusCaster.cpp
@@ -312,7 +316,6 @@ set(lib_MAIN_SRCS
 	CCreatureHandler.cpp
 	CPlayerState.cpp
 	CRandomGenerator.cpp
-	CScriptingModule.cpp
 	CSkillHandler.cpp
 	CStack.cpp
 	GameSettings.cpp
@@ -325,7 +328,6 @@ set(lib_MAIN_SRCS
 	RiverHandler.cpp
 	RoadHandler.cpp
 	MapLayerHandler.cpp
-	ScriptHandler.cpp
 	TerrainHandler.cpp
 	TurnTimerInfo.cpp
 	GameLibrary.cpp
@@ -735,6 +737,13 @@ set(lib_MAIN_HEADERS
 	serializer/Serializeable.h
 	serializer/SerializerReflection.h
 
+	scripting/ScriptPool.h
+	scripting/ScriptContext.h
+	scripting/ScriptDefines.h
+	scripting/ScriptHandler.h
+	scripting/ScriptImpl.h
+	scripting/ScriptModule.h
+
 	spells/AbilityCaster.h
 	spells/BattleSpellMechanics.h
 	spells/BonusCaster.h
@@ -791,7 +800,6 @@ set(lib_MAIN_HEADERS
 	Color.h
 	CPlayerState.h
 	CRandomGenerator.h
-	CScriptingModule.h
 	CSkillHandler.h
 	CSoundBase.h
 	CStack.h
@@ -815,7 +823,6 @@ set(lib_MAIN_HEADERS
 	RiverHandler.h
 	RoadHandler.h
 	MapLayerHandler.h
-	ScriptHandler.h
 	ScopeGuard.h
 	StartInfo.h
 	TerrainHandler.h
