Fix crash on start on macOS

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -545,8 +545,10 @@ if(VCMI_PORTMASTER)
 endif()
 
 if (ENABLE_DISCORD)
-	find_package(fmt QUIET)
-	find_package(glaze QUIET)
+	if(NOT APPLE) # TODO: system-provided libfmt and/or glaze cause crash on start on macOS
+		find_package(fmt QUIET)
+		find_package(glaze QUIET)
+	endif()
 	add_subdirectory(lib/discord-presence)
 	target_link_libraries(vcmiclientcommon PRIVATE discord-rpc)
 	target_compile_definitions(vcmiclientcommon PRIVATE ENABLE_DISCORD)
