--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: vcmi
 Section: games
 Priority: optional
 Maintainer: Ivan Savenko <saven.ivan@gmail.com>
-Build-Depends: debhelper (>= 8), cmake, libsdl2-dev, libsdl2-image-dev, libsdl2-ttf-dev, libsdl2-mixer-dev, zlib1g-dev, libavformat-dev, libswscale-dev, libboost-dev, libboost-program-options-dev, libboost-filesystem-dev, libboost-system-dev, libboost-locale-dev, libboost-thread-dev, libboost-iostreams-dev, libtbb-dev, libfuzzylite-dev, libminizip-dev, liblzma-dev, libsquish-dev, libfmt-dev, libluajit-5.1-dev, qt6-base-dev, qt6-base-dev-tools, qt6-tools-dev, qt6-tools-dev-tools, qt6-l10n-tools, qt6-svg-dev, libonnxruntime-dev
+Build-Depends: debhelper (>= 8), cmake, libsdl2-dev, libsdl2-image-dev, libsdl2-ttf-dev, libsdl2-mixer-dev, zlib1g-dev, libavformat-dev, libswscale-dev, libboost-dev, libboost-program-options-dev, libboost-filesystem-dev, libboost-system-dev, libboost-locale-dev, libboost-thread-dev, libboost-iostreams-dev, libtbb-dev, libfuzzylite-dev, libminizip-dev, liblzma-dev, libsquish-dev, libfmt-dev, libluajit-5.1-dev, qt6-base-dev, qt6-base-dev-tools, qt6-tools-dev, qt6-tools-dev-tools, qt6-l10n-tools, qt6-svg-dev
 Standards-Version: 3.9.1
 Homepage: http://vcmi.eu
 Vcs-Git: git://github.com/vcmi/vcmi.git
