Fix .deb packaging for Ubuntu 22.04

--- a/debian/rules
+++ b/debian/rules
@@ -10,7 +10,8 @@ override_dh_auto_configure:
 		-DCMAKE_INSTALL_RPATH=/usr/lib/$(DEB_HOST_MULTIARCH)/vcmi \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DENABLE_DISCORD=OFF \
-		-DENABLE_MMAI=ON \
+		-DENABLE_MMAI=OFF \
+		-DENABLE_TEMPLATE_EDITOR=OFF \
 		-DENABLE_GOLDMASTER=ON \
 		-DBIN_DIR=games \
 		-DFORCE_BUNDLED_FL=OFF \
